# poetry_run_src

./: README.md  run_examples.py
example_a/: pyproject.toml
example_a/example_a/: __init__.py
example_a/tests/: test_example_a.py
example_b/: pyproject.toml
example_b/src/example_b/: __init__.py
example_b/tests/: test_example_b.py
example_c/: pyproject.toml
example_c/src/example_c/: __init__.py
example_c/tests/: test_example_c.py
