[tool.poetry]
name = "example_c"
version = "0.1.0"
description = ""
authors = ["cpterry <example@example.example>"]

[tool.poetry.scripts]
example_c = "src.example_c:main"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
